# fisheye-mc

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
dat/camera_forward/: current.pgm  reference.pgm
dat/camera_lateral/: current.pgm  reference.pgm
dat/object_forward/: current.pgm  reference.pgm
dat/object_lateral/: current.pgm  reference.pgm
src/: h264.cpp  h264.hpp  main.cpp  motion_estimator.cpp  motion_estimator.hpp  radial.cpp  radial.hpp
